--- a/src/Ristinolla.css
+++ b/src/Ristinolla.css
@@ -1,19 +1,19 @@
-.App {
+.Ristinolla {
   text-align: center;
 }
 
-.App-logo {
+.Ristinolla-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .Ristinolla-logo {
+    animation: Ristinolla-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Ristinolla-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.App-link {
+.Ristinolla-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Ristinolla-logo-spin {
   from {
     transform: rotate(0deg);
   }
