--- a/src/Ristinolla.css
+++ b/src/Ristinolla.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 5%;
+  margin-top: 100px;
+  margin-left: 100px;
   width: 400px;
   height: 400px;
   padding: 5px;
@@ -22,10 +23,6 @@
   border: 1px solid #222222;
   font-size: 5em;
   text-align: center;
-}
-
-body {
-  
 }
 
 .Ristinolla-logo {
